Closed Bug 79737 Opened 23 years ago Closed 23 years ago

[xpcdom] Changing product does not update component list

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
major

Tracking

()

VERIFIED FIXED

People

(Reporter: bzbarsky, Assigned: jst)

References

()

Details

Attachments

(1 file)

2001-05-08 evening build.  Selecting a product gives the following error:

Error: f.product[i] has no properties
Source File: http://bugzilla.mozilla.org/query.cgi
Line: 788

The code in question:

    for (i=0 ; i<f.product.length ; i++) {
        if (f.product[i].selected) {
            cnt++;
        }
    }

where "f" is document.forms[0] (the query form) and that form has a child select
named "product"
and.... I would call this dogfood.  :)
Keywords: nsdogfood
updating OS and Platform to all
Severity: normal → major
OS: Linux → All
Hardware: PC → All
I think this also breaks the bugzilla helper.  When trying to submit a bug
through the helper I get this error:

Error: aForm.Product[aForm.Product.selectedIndex] has no properties
Source File: http://www.mozilla.org/quality/help/bugreport.js
Line: 186
*** Bug 79991 has been marked as a duplicate of this bug. ***
Keywords: nsbeta1
*** Bug 80121 has been marked as a duplicate of this bug. ***
sr=jband
Fixed.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
*** Bug 80453 has been marked as a duplicate of this bug. ***
Verified with 2001-05-22-04.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: