Fixing xpcdom regression bug 79737 that caused problems on bugzilla. HTMLFormElement's resolve hook wasn't implemented so form controls in a form weren't shadowing DOM properties on form elements. Also fixing problem with select[n] = new Object(). r=pollmann@netscape.com, sr=jband@netscape.com